--- a/README.du
+++ b/README.du
@@ -98,9 +98,9 @@ Predicted Disease: Flu
 
 ## 👤 Author
 
-**Your Name**  
+**durga prasad singh**  
 Semester IV, B.Tech  
-[Your College Name]
+[Galgotias university]
 
 ---
 
